<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_name"
        android:title="@string/title_Hp" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_action_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_action_report"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_checklist"
        android:icon="@drawable/ic_action_checklist"
        android:title="@string/title_checklist" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_action_more"
        android:title="@string/title_more" />

</menu>
